microservices/istio-ingress/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: testing-yuya-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "testing-yuya.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testing-yuya
spec:
  hosts:
  - "testing-yuya.com"
  gateways:
  - testing-yuya-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /payment
    - uri:
        exact: /review
    route:
    - destination:
        host: frontend-service # service name
        port:
          number: 5000
